kind/istio/istio-gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: ingress
spec:
  selector:
    istio: ingress
  servers:

    - port:
        number: 31080
        name: http
        protocol: HTTP
      hosts:
        - "*"
