kind/istio/virtualservice.yaml
## Catch-all VirtualService to return 404 for unmatched requests

apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: default
  namespace: istio-system
spec:
  gateways:
    - istio-system/ingress
  hosts:
    - "*"
  http:
    - match:
        - uri:
            prefix: /
      directResponse:
        status: 404
        body:
          string: Service Not Found
